--- a/PetShop/index.html
+++ b/PetShop/index.html
@@ -98,7 +98,7 @@
 
             <input placeholder="Ingresá tu correo electrónico" type="email" name="email" id="email">
 
-            <input placeholder="Ingresá tu telefono pedazo de pito corto" type="tel" name="telefono" id="telefono">
+            <input placeholder="Ingresá tu teléfono" type="tel" name="telefono" id="telefono">
 
             <div>
                 <button id="boton1" type="reset" value="Resetear">Resetear</button>
@@ -114,7 +114,7 @@
                         <img src="img/iconCarta.svg" alt="iconCarta">
                         <h3>Suscribite para más novedades</h3>
                     </div>
-                    <form action="">
+                    <form action='' method="POST">
                         <input placeholder="Ingresá tu correo electrónico" type="text">
                         <button type="submit" value="Enviar">Suscribirme</button>
                     </form>
