--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <header class="main-header">
         <div class="logo">
-            <a href="#banner">LOGO</a>
+            <a href="#banner"><span>lea</span>dev</a>
         </div>
 
         <input type="checkbox" class="menu-btn" id="menu-btn">
@@ -269,10 +269,10 @@
 
         <section class="contact" id="contact">
             <h3>Contact</h3>
-            <form action="https://formsubmit.co/cronosteo1034@gmail.com" method="POST" class="container">
+            <form action="https://formsubmit.co/467991df3709f0196227989efe2b1fd6" method="POST" class="container">
 
                 <input type="hidden" name="_autoresponse" value="Tu mensaje fue recibido correctamente. Me comunico en un ratitus, cara e cui">
-                <input type="hidden" name="_next" value= https://falconleandro.github.io/Trabajos>
+                <input type="hidden" name="_next" value= >
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="Mensaje desde el Portfolio wachin!!!">
                 <div class="row100">
