--- a/PetShop/index.html
+++ b/PetShop/index.html
@@ -56,9 +56,6 @@
                 <a href="">COMEDEROS</a>
             </div>
 
-
-
-
         </div>
         <section class='productos'>
             <div class=caja5>
@@ -72,19 +69,19 @@
             </div>
             <div class="caja6">
                 <div>
-                    <img src="https://s3-alpha-sig.figma.com/img/c0fa/9330/876474dc05112a5f7e22d36cd77fdc95?Expires=1630886400&Signature=Su~h6cJDs~m7tVkiyxlvsWE74RUz7xy~BQjfuKPy95p78P5LqYEUqYfo28Fz3VinvbZGvkTf93qy4SADa-XdORU2mXwQZk-bgmPPzmaTPX-p9tODjVfVKgrUaD~L2-8VUvw9gXRae6SxgVc3IbOFetqV9woydI1TlRa-AW5GZabq8TRcXXuPZ-STj50uZgovb72ulqcir0~vL26ZtrB9F0GAQFiHF5ifZtlY~yzttsjWqpT2fmV9PH~Hpemo0uhkD4hzFC3-HVkH7Aw0ctVBQlHIiC8v9QFhZ3wJfNMQxKsdCtz~9m72U4OWDkL3oH~iqFbKoI4BcB244NuATBP2dA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
+                    <img src="img/JugueteChurr.png"
                         alt="">
                     <p>Juguete Churrasquito</p>
                     <p><span>$150</span></p>
                 </div>
                 <div>
-                    <img src="https://s3-alpha-sig.figma.com/img/c2a8/66ce/7125726772bb9e97c78cbff7ed994948?Expires=1630886400&Signature=YyV-PIolmfL-D0mR23F5f4CLXrp0nc~8mIQ8O0Sx1iz5KSYUJbXqHvYPv0o7pZEEhI3jDAKFCIwDW87Va1VSgxKwKsXpSZNLQ5pK9u53vSRZ22gQcrW~8DTzRYfLdIyJ~a48F8rdkmDC2kwPyhX3qYgIxXM3q5XVmQZFS1WHJZ5aUJbRRU4wMX79k7IbjzI5XwNyi~yB9Ak6gMe4swM8JN2LoAVxfllqGJUaRvcHEadXBM2LtpIUJLn5Hjz0qvTTDg1O3lmXDVc4qwb4nYesv9zcyd5lnYGm~O74ZKpoPQBtWMc8yfsdiT7LWn1TTggaVym4Ahv38G49LN6dUunfhg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
+                    <img src="img/comedero.png"
                         alt="">
                     <p>Comedero para Perro </p>
                     <p><span>$250</span></p>
                 </div>
                 <div>
-                    <img src="https://s3-alpha-sig.figma.com/img/0c07/a3f6/4eda1531de59d2a90d400dc0bf5279cd?Expires=1630886400&Signature=BKN3ARLWbqYeb5Sf~sjZK95qQUC~NUmmP0nkXViYo5ZRFt7ZzyKVdlW5y7bCyQXVU0c2XszNWZ98NVjbSjUaN-JDdOOcvCz8zOm1GgOTMg1E31zD1XIK0JAog6eajNvmhvadzrM1URUmKitmqkuhiCL-o0OyFSJlW01RH-L0T-t9XqNzhV~R8sf4YdgNsPuVpyWoZIxBKWjR6iiC3d0p5xEhUXSeR4kF9T9mJE8g5~-bQJd3Hfi~72ktA4U0VV-qa7Nqh98VNwH3b4dkrTIkYN26oScDz7ec9hIKz7y~MPYcz4k3xa~dAWWpwoRyhQDNuLKUB0GUuVqZ9oMV2lg~Mw__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
+                    <img src="img/huesito.png"
                         alt="">
                     <p>Juguete Huesito</p>
                     <p><span>$650</span></p>
@@ -115,7 +112,7 @@
                         <h3>Suscribite para más novedades</h3>
                     </div>
                     <form action='' method="POST">
-                        <input placeholder="Ingresá tu correo electrónico" type="text">
+                        <input placeholder="Ingresá tu correo electrónico" type="email">
                         <button type="submit" value="Enviar">Suscribirme</button>
                     </form>
 
