--- a/Heroes/index/index.html
+++ b/Heroes/index/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--responsive en HTML-->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
     <title>Document</title>
   </head>
 
@@ -33,7 +33,10 @@
           <div class="card-text">
             <h2>Batman</h2>
             <p>
-              A diferencia de la mayoría de los superhéroes, él no posee superpoderes, sino que hace uso de la inteligencia, habilidades de detective, la ciencia y la tecnología, su riqueza, su fuerza física y la intimidación en su guerra contra el crimen.
+                A diferencia de la mayoría de los superhéroes, él no posee superpoderes,
+                sino que hace uso de la inteligencia, habilidades de detective, 
+                la ciencia y la tecnología, su riqueza, su fuerza física y la intimidación
+                en su guerra contra el crimen.
             </p>
           </div>
         </section>
