--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         <div class="inputBox textarea">
                             <textarea style="overflow: hidden" name="textArea" class="textArea"
                                 required="required"></textarea>
-                            <span class="text">Type your message here...</span>
+                            <span class="text message">Type your message here...</span>
                             <span class="line"></span>
                         </div>
                     </div>
