responsive6 y estilos a proyectos

--- a/Heroes/contacto/contacto.html
+++ b/Heroes/contacto/contacto.html
@@ -8,8 +8,6 @@
     <title>Contacto</title>
   </head>
   <body>
-    <div class="descuento"><p>Descuentos 20%</p></div>
-
     <header>
       <h1 class="heroes">Heroes</h1>
     </header>
@@ -57,8 +55,8 @@
     </main>
 
     <footer>
-      <p>Todos los derechos reservados a Micaela Gonella</p>
-      <a href="https://micaelagonella.github.io/FrontEnd1/"
+      <p>Todos los derechos reservados a Falcon Leandro</p>
+      <a href="https://github.com/FalconLeandro/Trabajos"
         ><i class="fab fa-github git git"></i
       ></a>
     </footer>
