--- a/Heroes/index/index.html
+++ b/Heroes/index/index.html
@@ -13,7 +13,8 @@
     <div class="descuento"><p>Descuentos 20%</p></div>
 
     <header>
-      <h1>Heroes</h1>
+      <h1>Heroes <i class="fas fa-mask"></i></h1>
+      
       <nav>
         <ul>
           <li><a href="../contacto/contacto.html">Contacto</a></li>
@@ -36,7 +37,8 @@
                 A diferencia de la mayoría de los superhéroes, él no posee superpoderes,
                 sino que hace uso de la inteligencia, habilidades de detective, 
                 la ciencia y la tecnología, su riqueza, su fuerza física y la intimidación
-                en su guerra contra el crimen.
+                en su guerra contra el crimen. Batman es un símbolo que representa la luz en
+                la oscuridad.
             </p>
           </div>
         </section>
@@ -83,11 +85,11 @@
           <div class="card-text">
             <h2>Mujer Maravilla</h2>
             <p>
-              Es una superheroína creada por William Moulton Marston para la
+              Es una superheroína creada por William Marston para la
               editorial DC Comics. Es una princesa guerrera de las Amazonas,
               pueblo ficticio basado en el de las amazonas de la mitología
               griega. En su tierra natal es conocida como la princesa Diana de
-              Temiscira pero fuera de esta utiliza la identidad secreta de Diana
+              Temiscira pero fuera de esta utiliza la identidad secreta de Sta
               Prince.
             </p>
           </div>
