--- a/Heroes/registro/registro.html
+++ b/Heroes/registro/registro.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="descuento"><p>Descuentos 20%</p></div>
+    
 
     <header>
       <h1 class="heroes">Heroes</h1>
@@ -62,7 +62,7 @@
     </main>
 
     <footer>
-      <p>Todos los derechos reservados a Micaela Gonella</p>
+      <p>Todos los derechos reservados a Falcon Leandro</p>
       <a href="https://micaelagonella.github.io/FrontEnd1/"
         ><i class="fab fa-github git git"></i
       ></a>
