--- a/index.html
+++ b/index.html
@@ -112,12 +112,11 @@
                         <h2>Hi! I am Leandro</h2>
                     </div>
                     <div>
-                        <p> Este portfolio es mi primer proyecto personal (responsive in
-                            progress)
+                        <p> Este portfolio es mi primer proyecto personal.
                             Soy un entusiasta de las nuevas tecnologías, la naturaleza, el diseño y el equilibrio entre
                             estas.
                             Convencido de la reinvención personal y el auto diseño.
-                            Encontré en la programación el entorno ideal para unir las partes de las que estoy hecho,
+                            Encontré en la programación el entorno ideal para unir las partes de las que estoy hecho
                             y desarrollar nuevas.
                         </p>
                     </div>
@@ -383,7 +382,7 @@
         </div>
     </footer>
     <script src="dist/js/carrusel.js"></script>
-    <!-- <script src="dist/js/cerrarMenu.js"></script>  -->
+    <script src="dist/js/cerrarMenu.js"></script> 
 
 </body>
 
