--- a/Heroes/login/login.html
+++ b/Heroes/login/login.html
@@ -8,7 +8,7 @@
     <title>Login</title>
   </head>
   <body>
-    <div class="descuento"><p>Descuentos 20%</p></div>
+    
     <header>
       <h1 class="heroes">Heroes</h1>
     </header>
@@ -47,8 +47,8 @@
     </main>
 
     <footer>
-      <p>Todos los derechos reservados a Micaela Gonella</p>
-      <a href="https://micaelagonella.github.io/FrontEnd1/"
+      <p>Todos los derechos reservados a Falcon Leandro</p>
+      <a href="https://github.com/FalconLeandro/Trabajos"
         ><i class="fab fa-github git git"></i
       ></a>
     </footer>
