responsive 1 de proyectos

--- a/Heroes/contacto/contacto.html
+++ b/Heroes/contacto/contacto.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1 class="heroes">Heroes</h1>
+      <h1 class="heroes"><i class="fas fa-mask"></i>Heroes</h1>
     </header>
 
     <main>
@@ -35,7 +35,7 @@
           />
 
           <label for="mensaje">Mensaje</label>
-          <textarea
+          <textarea style="overflow:hidden"
             name="mensaje"
             placeholder="Hola!, me gustaría recibir información sobre el muñeco de Batman, ya que como saben soy muy fanático de bruce wayne. Gracias!"
           ></textarea>
