--- a/Heroes/login/login.html
+++ b/Heroes/login/login.html
@@ -10,7 +10,7 @@
   <body>
     
     <header>
-      <h1 class="heroes">Heroes</h1>
+      <h1 class="heroes"><i class="fas fa-mask"></i>Heroes</h1>
     </header>
 
     <main>
