--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
     </header>
     <main>
         <div class="banner" id="banner">
-            <video autoplay="" loop="" muted="">
-                <source src="dist/img/videoFog.mp4">
-            </video>
+             <video   autoplay="" loop="" muted="">
+                <source src="/dist/img/videoFog.mp4">
+            </video> 
+            
 
             <h1>Leandro Falcón</h1>
             
