--- a/Heroes/registro/registro.html
+++ b/Heroes/registro/registro.html
@@ -12,7 +12,7 @@
     
 
     <header>
-      <h1 class="heroes">Heroes</h1>
+      <h1 class="heroes"><i class="fas fa-mask"></i>Heroes</h1>
     </header>
 
     <main>
