--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </header>
     <main>
         <div class="banner" id="banner">
-             <video  poster="/dist/img/Sin título.png" autoplay="" loop="" muted="">
+             <video  autoplay="" loop="" muted="">
                 <source src="/dist/img/videoFog.mp4">
             </video> 
             
