--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <main>
         <div class="banner" id="banner">
              <video  autoplay="" loop="" muted="">
-                <source src="/dist/img/videooFog.mp4">
+                <source src="dist/img/videooFog.mp4">
             </video> 
             
 
