--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 <body>
 
 
-    <div id="preloader">
-
-    </div>
+    <div id="preloader"></div>
 
     <script>
         function play() {
@@ -48,7 +46,7 @@
         <a target='_blank' href="https://api.whatsapp.com/send?phone=5493548583686"><i
                 class="fab fa-whatsapp"></i></i>Whatsapp</a>
     </div>
-    <header class="main-header">
+    <header id="header" class="main-header">
         
 
         <div class="logo">
@@ -64,16 +62,18 @@
         </label>
 
         <ul class="nav-links">
-
+            <li class="nav-link">
+                <a href="#banner">Home</a>
+            </li>
             <li class="nav-link">
                 <a href="#portfolio">Portfolio</a>
-                </lia>
+            </li>
             <li class="nav-link">
                 <a href="#skillset">Skillset</a>
-                </lia>
+            </li>
             <li class="nav-link">
                 <a href="#ref-point">About me</a>
-                </lia>
+            </li>
             <li class="nav-link">
                 <a href="#contact">Contact</a>
             </li>
@@ -89,7 +89,7 @@
             <h1>Leandro Falcón</h1>
             
             <div class="wordChanger">
-                <p>Estudiante de =></p>
+                <p>Estudiante de ></p>
                     <ul>
                         <li>Licenciatura en Informatica</li>
                         <li>Analisis de Sistemas</li>
