--- a/ThanksPage/thanksPage.html
+++ b/ThanksPage/thanksPage.html
@@ -19,12 +19,12 @@
     <div class="thanks-container">
       <div>
         <a href="http://falconleandro.github.io/Trabajos/"
-          ><img src="/ThanksPage/img/logo-portfolio.png" alt="logo-portfolio"
+          ><img id="img" src="/ThanksPage/img/logo-portfolio.png" alt="logo-portfolio"
         /></a>
       </div>
       <div>
         <h1>Thanks!</h1>
-        <h3>Tu mensaje me llego, te respondo al toque culiau</h3>
+        <h3>Tu mensaje me llego, te respondo al toque</h3>
       </div>
     </div>
   </body>
