color background banner

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
     <main>
         <div class="banner content" id="banner">
             <div class="banner-video">
-               <video  autoplay="" loop="" muted="">
+               <video  autoplay="" loop="" muted="" poster="https://images.pexels.com/photos/1995730/pexels-photo-1995730.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260">
                    <source src="dist/img/videooFog.mp4">
+                   
+                
                </video>
             </div>
             <div class="banner-content">
