--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     <main>
         <div class="banner content" id="banner">
             <div class="banner-video">
-               <!-- <video  autoplay="" loop="" muted="">
+               <video  autoplay="" loop="" muted="">
                    <source src="dist/img/videooFog.mp4">
                    
                 
-               </video> -->
+               </video>
             </div>
             <div class="banner-content">
                 <div class="banner-titulo">
