--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="#skillset">Skillset</a>
             </li>
             <li class="nav-link">
-                <a href="#fotoPerfil">About me</a>
+                <a href="#about-me">About me</a>
             </li>
             <li class="nav-link">
                 <a href="#contact">Contact</a>
@@ -76,8 +76,8 @@
                     </div> 
                 </div>
                 
-                <div class="about-me">
-                    
+                <div class="about-me" id="about-me">
+                    <!-- <input id="about-me" type="button" value=""> -->
                         <div class="img">
                             <img id="fotoPerfil" src="dist/img/fotoPerfil2.jpg" alt="fotoPerfil">
                         </div>
