--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                             <div>
                                 <p> 
                                     He aqui un entusiasta de las nuevas tecnologías, la naturaleza, el diseño y el equilibrio entre
-                                    estas tres. Me considero algo asi como un convencido de la reinvención personal y el auto diseño.
-                                    Encontré en la programacion un entorno genial para unir las partes de las que considero estoy hecho
-                                    y con muchas, muchas ganas de desarrollar nuevas.
+                                    estas. Soy creativo, curioso y fan de los puzzles. Me considero un convencido del auto diseño.
+                                    Encontré en la programacion un entorno genial para unir las partes de las que estoy hecho
+                                    y desarrollar nuevas.
                                 </p>
                             </div>
                             <div>
