--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
                             </span>
                         </div>
                         <div>
-                            <i class="fab fa-git-alt iconoskill"></i>
+                            <i class="fas fa-cubes iconoskill"></i>
                             <span class="tooltip">
-                                Bash
+                                Programacion Orientada a Objetos
                             </span>
                         </div>
                         <div>
@@ -217,7 +217,7 @@
                         <div>
                             <i class="fab fa-bootstrap iconoskill"></i>
                             <span class="tooltip">
-                                BoopStrap
+                                Bootstrap
                             </span>
                         </div>
                         <div>
