--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         data-aos-delay="2000"
         data-aos-offset="0"
         data-aos-duration="3000">
-            <audio src="dist/img/piano-improvisation-6884.mp3" id="audio"></audio>
+            <audio src="dist/img/Dreamy_80_Bm_mp3.mp3" id="audio"></audio>
             <i data-aos="fade-zoom-in"
             data-aos-easing="ease-in-back"
             data-aos-delay="2000"
             data-aos-offset="0"
             data-aos-duration="3000" class="fas fa-wave-square" id="play" onclick="play()"></i>
-            <a id="logo" href="#banner"><span>lea</span>dev</a>
+            <a id="logo" href="#banner">lea<span>dev</span></a>
         </div>
         <input type="checkbox" class="menu-btn" id="menu-btn">
         <label for="menu-btn" class="menu-icon">
@@ -102,9 +102,9 @@
                     </div>
                     
                     <div class="wordChanger">
-                        <p>Estudiante de ></p>
+                        <p>Estudiante de <span>></span> </p>
                         <ul>
-                            <li>Licenciatura en Informatica</li>
+                            <li>&nbsp Licenciatura en Informática</li>
                             <li>Analisis de Sistemas</li>
                             <li>Certified Tech Developer</li>
                         </ul>
@@ -117,21 +117,18 @@
                             <img id="fotoPerfil" src="dist/img/fotoPerfil2.jpg" alt="fotoPerfil" 
                             data-aos="fade-zoom-in"
                             data-aos-easing="ease-in-back"
-                            data-aos-delay="0"
                             data-aos-offset="200"
-                            data-aos-duration="1000">
+                            data-aos-duration="500">
                         </div>
                         <div class="about-me_texto" id="about-me_texto" >
                             <div data-aos="fade-zoom-in"
                             data-aos-easing="ease-in-back"
-                            data-aos-delay="0"
                             data-aos-offset="200"
                             data-aos-duration="1000">
                                 <h2 >Hi! I am Leandro</h2>
                             </div>
                             <div data-aos="fade-zoom-in"
                             data-aos-easing="ease-in-back"
-                            data-aos-delay="1000"
                             data-aos-offset="200"
                             data-aos-duration="1000" >
                                 <p > 
@@ -143,15 +140,11 @@
                             </div>
                             <div data-aos="fade-zoom-in"
                             data-aos-easing="ease-in-back"
-                            data-aos-delay="1000"
-                            data-aos-offset="0"
                             data-aos-duration="1000">
                                 <p >
                                     Actualmente curso una Licenciatura en Informática en la Siglo 21, a 3 materias de obtener mi
                                     titulo intermedio de Técnico
-                                    Universitario de Analisis de Sistemas. Paralelamente aprovecho la posibilidad de acceso a
-                                    todos los contenidos de la carrera Certified
-                                    Tech Developer de Digital House.
+                                    Universitario de Analisis de Sistemas. 
                                 </p>
                             </div>
                         </div>
