tratando de resolver 4

--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
             data-aos-delay="2000"
             data-aos-offset="0"
             data-aos-duration="3000">
-                <a href="#skillset" >Skillset</a>
+                <a href="#hard-skills">Stack</a>
+            </li>
+            <li class="nav-link" data-aos="fade-zoom-in"
+            data-aos-easing="ease-in-back"
+            data-aos-delay="2000"
+            data-aos-offset="0"
+            data-aos-duration="3000">
+                <a href="#soft-skills">Soft Skills</a>
             </li>
             <li class="nav-link" data-aos="fade-zoom-in"
             data-aos-easing="ease-in-back"
@@ -203,8 +210,9 @@
             </div>
         </div>
         <div class="skillset" id="skillset" >
+            <div id="hard-skills">
+                <h3 data-aos="fade-left" data-aos-duration="1000">Stack</h3>
             <div >
-                <h3 data-aos="fade-left" data-aos-duration="1000">Skillset</h3>
                 <div class="hardskills-container" >
                     <div class="hardskills " >
                         <div >
@@ -282,10 +290,13 @@
                     </div>
                 </div>
             </div>
-            <div class="soft-skills" >
+            <div class="soft-skills" id="soft-skills" >
+                <video id="video" autoplay="" loop="" muted="">
+                    <source src="">
+                 </video>
                 <h3 data-aos="fade-left"  data-aos-duration="1000">Soft Skills</h3>
                 <div class="ssContainer">
-                    <div class="softskills " >
+                    <div class="softskills " id='sk' >
                         <div >
                             <h4 data-aos="fade-right" data-aos-duration="1000">Creativity</h4>
                         </div>
@@ -305,6 +316,12 @@
                             <h4 data-aos="fade-right" data-aos-duration="1000">Research</h4>
                         </div>
                     </div>
+                    <i class="fas fa-chevron-left" id="iconBack" data-aos="fade-right" data-aos-duration="1000" data-aos-offset="-100"></i>
+                </div>
+            </div>
+            
+        </div>
+        <script src="/dist/js/interactive-video.js"></script>
                 </div>
             </div>
         </div>
