--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
     <script src="dist/js/main.js"></script>
     <script src="dist/js/carrusel.js"></script>
     <script src="dist/js/cerrarMenu.js"></script> 
+    <!-- <script src="dist/js/imgChanger.js"></script> -->
     <script >
         var loader = document.getElementById('preloader');
         window.addEventListener('load', function(){
