interactive video-new videos

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
             data-aos-duration="3000">
                 <a href="#soft-skills">Soft Skills</a>
             </li>
-            <li class="nav-link" data-aos="fade-zoom-in"
+            <li  class="nav-link" data-aos="fade-zoom-in"
             data-aos-easing="ease-in-back"
             data-aos-delay="2000"
             data-aos-offset="0"
             data-aos-duration="3000">
-                <a href="#contact">Contact</a>
+                <a id="conta" href="#contact">Contact</a>
             </li>
         </ul>
     </header>
@@ -216,73 +216,73 @@
                 <div class="hardskills-container" >
                     <div class="hardskills " >
                         <div >
-                            <i data-aos="flip-right" data-aos-delay="300" data-aos-duration="2000" class="fab fa-html5 iconoskill"></i>
+                            <i data-aos="flip-right"  data-aos-duration="1000" class="fab fa-html5 iconoskill"></i>
                             <span class="tooltip">
                                 HTML
                             </span>
                         </div>
                         <div>
-                            <i data-aos="flip-right" data-aos-delay="300" data-aos-duration="2000" class="fab fa-css3-alt iconoskill"></i>
+                            <i data-aos="flip-right"  data-aos-duration="1000" class="fab fa-css3-alt iconoskill"></i>
                             <span class="tooltip">
                                 CSS
                             </span>
                         </div>
                         <div>
-                            <i data-aos="flip-right" data-aos-delay="300" data-aos-duration="2000" class="fab fa-js-square iconoskill"></i>
+                            <i data-aos="flip-right"  data-aos-duration="1000" class="fab fa-js-square iconoskill"></i>
                             <span class="tooltip">
                                 JavaScript
                             </span>
                         </div>
                         <div>
-                            <i data-aos="flip-right" data-aos-delay="300" data-aos-duration="2000" class="fab fa-git iconoskill"></i>
+                            <i data-aos="flip-right"  data-aos-duration="1000" class="fab fa-git iconoskill"></i>
                             <span class="tooltip">
                                 GIT
                             </span>
                         </div>
                         <div>
-                            <i data-aos="flip-right" data-aos-delay="300" data-aos-duration="2000" class="fas fa-cubes iconoskill"></i>
+                            <i data-aos="flip-right"  data-aos-duration="1000" class="fas fa-cubes iconoskill"></i>
                             <span class="tooltip">
                                 Programacion Orientada a Objetos
                             </span>
                         </div>
                         <div>
-                            <i data-aos="flip-right" data-aos-delay="300" data-aos-duration="2000" class="fab fa-node-js iconoskill"></i>
+                            <i data-aos="flip-right"  data-aos-duration="1000" class="fab fa-node-js iconoskill"></i>
                             <span class="tooltip">
                                 Node.js
                             </span>
                         </div>
                         <div>
-                            <i data-aos="flip-right" data-aos-delay="300" data-aos-duration="2000" class="fab fa-sass iconoskill"></i>
+                            <i data-aos="flip-right"  data-aos-duration="1000" class="fab fa-sass iconoskill"></i>
                             <span class="tooltip">
                                 SASS
                             </span>
                         </div>
                         <div>
-                            <i data-aos="flip-right" data-aos-delay="300" data-aos-duration="2000" class="fab fa-java iconoskill"></i>
+                            <i data-aos="flip-right"  data-aos-duration="1000" class="fab fa-java iconoskill"></i>
                             <span class="tooltip">
                                 Java
                             </span>
                         </div>
                         <div>
-                            <i data-aos="flip-right" data-aos-delay="300" data-aos-duration="2000" class="fas fa-server iconoskill"></i>
+                            <i data-aos="flip-right"  data-aos-duration="1000" class="fas fa-server iconoskill"></i>
                             <span class="tooltip">
                                 SQL
                             </span>
                         </div>
                         <div>
-                            <i data-aos="flip-right" data-aos-delay="300" data-aos-duration="2000" class="fab fa-figma iconoskill"></i>
+                            <i data-aos="flip-right"  data-aos-duration="1000" class="fab fa-figma iconoskill"></i>
                             <span class="tooltip">
                                 Figma
                             </span>
                         </div>
                         <div>
-                            <i data-aos="flip-right" data-aos-delay="300" data-aos-duration="2000" class="fab fa-bootstrap iconoskill"></i>
+                            <i data-aos="flip-right"  data-aos-duration="1000" class="fab fa-bootstrap iconoskill"></i>
                             <span class="tooltip">
                                 Bootstrap
                             </span>
                         </div>
                         <div>
-                            <i data-aos="flip-right" data-aos-delay="300" data-aos-duration="2000" class="fab fa-wordpress iconoskill"></i>
+                            <i data-aos="flip-right"  data-aos-duration="1000" class="fab fa-wordpress iconoskill"></i>
                             <span class="tooltip">
                                 WordPress
                             </span>
@@ -297,22 +297,22 @@
                 <h3 data-aos="fade-left"  data-aos-duration="1000">Soft Skills</h3>
                 <div class="ssContainer">
                     <div class="softskills " id='sk' >
-                        <div >
+                        <div id="1">
                             <h4 data-aos="fade-right" data-aos-duration="1000">Creativity</h4>
                         </div>
-                        <div >
+                        <div id="2">
                             <h4 data-aos="fade-right" data-aos-duration="1000">Visualization</h4>
                         </div>
-                        <div >
+                        <div id="3">
                             <h4 data-aos="fade-right" data-aos-duration="1000">Comunication</h4>
                         </div>
-                        <div >
+                        <div id="4">
                             <h4 data-aos="fade-right" data-aos-duration="1000">Empathy</h4>
                         </div>
-                        <div >
+                        <div id="5">
                             <h4 data-aos="fade-right" data-aos-duration="1000">Learnability</h4>
                         </div>
-                        <div >
+                        <div id="6">
                             <h4 data-aos="fade-right" data-aos-duration="1000">Research</h4>
                         </div>
                     </div>
